--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -7,24 +7,12 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "node/no-unpublished-require": 0,
-    "comma-dangle": [
-      "error",
-      "always-multiline"
-    ],
-    "eol-last": [
-      "error",
-      "always"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ],
-    "@typescript-eslint/no-var-requires": 1,
-    "@typescript-eslint/camelcase": 1
+    "comma-dangle": ["error", "always-multiline"],
+    "eol-last": ["error", "always"],
+    "semi": ["error", "always"],
+    "@typescript-eslint/no-var-requires": 1
   }
 }
