--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "cd infra && cdk deploy NodeBlog-DatabaseStack NodeBlog-LambdasStack NodeBlog-ApiGwStack && cd .."
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +17,9 @@
     "@aws-cdk/aws-lambda-nodejs": "^1.116.0",
     "@aws-cdk/aws-s3": "^1.116.0",
     "@aws-cdk/core": "^1.116.0",
+    "@types/aws-lambda": "^8.10.81",
     "@types/jest": "^26.0.24",
+    "@types/lambda-log": "^2.2.1",
     "@types/node": "^16.4.6",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
@@ -27,5 +31,11 @@
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "aws-lambda": "^1.0.6",
+    "aws-sdk": "^2.957.0",
+    "lambda-log": "^3.0.0",
+    "uuid": "^8.3.2"
   }
 }
