--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-markdown": "^6.0.3"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.2",
