--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@sindresorhus/slugify": "^2.1.0",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.957.0",
     "lambda-log": "^3.0.0",
