--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "react-markdown": "^6.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "remark-breaks": "^2.0.2",
+    "remark-gfm": "^1.0.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
