Add footer & tech stack

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@blueprintjs/core": "^3.47.0",
     "@blueprintjs/icons": "^3.27.0",
+    "@react-hook/window-size": "^3.0.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
