Configure domain name (on both r53 & s3)

--- a/infra/package.json
+++ b/infra/package.json
@@ -5,18 +5,21 @@
   "main": "index.ts",
   "scripts": {
     "synth": "cdk synth",
-    "start": "cdk deploy NodeBlog-DatabaseStack NodeBlog-LambdasStack NodeBlog-ApiGwStack NodeBlog-WebsiteHostBucketStack"
+    "start": "cdk deploy --all"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@aws-cdk/aws-apigateway": "^1.116.0",
-    "@aws-cdk/aws-dynamodb": "^1.116.0",
-    "@aws-cdk/aws-lambda": "^1.116.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.116.0",
-    "@aws-cdk/aws-s3": "^1.116.0",
-    "@aws-cdk/aws-s3-deployment": "^1.117.0",
-    "@aws-cdk/core": "^1.116.0",
+    "@aws-cdk/aws-apigateway": "^1.118.0",
+    "@aws-cdk/aws-certificatemanager": "^1.118.0",
+    "@aws-cdk/aws-dynamodb": "^1.118.0",
+    "@aws-cdk/aws-lambda": "^1.118.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.118.0",
+    "@aws-cdk/aws-route53": "^1.118.0",
+    "@aws-cdk/aws-route53-targets": "^1.118.0",
+    "@aws-cdk/aws-s3": "^1.118.0",
+    "@aws-cdk/aws-s3-deployment": "^1.118.0",
+    "@aws-cdk/core": "^1.118.0",
     "@types/node": "^16.4.6",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
