infra: Invalidate cloudfront cache when deploying to s3

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "node-blog-frontend",
+  "homepage": "https://nodeblog.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
