--- a/infra/package.json
+++ b/infra/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "synth:all": "cd src && cdk synth --all && cdk ..",
     "deploy:all": "cd src && cdk deploy --all && cd ..",
-    "deploy:website": "cd src && cdk deploy NodeBlog-WebsiteHostBucketStack NodeBlog-CloudFrontStack && cd ..",
+    "deploy:website": "cd src && cdk deploy NodeBlog-WebsiteHostBucketStack NodeBlog-WebsiteHostBucketDeploymentStack NodeBlog-CloudFrontStack && cd ..",
     "deploy:api": "cd src && cd deploy NodeBlog-DatabaseStack NodeBlog-LambdasStack NodeBlog-ApiGwStack"
   },
   "author": "",
