--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,33 +4,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^3.47.0",
-    "@blueprintjs/icons": "^3.27.0",
+    "@blueprintjs/core": "^4.4.0",
+    "@blueprintjs/icons": "^4.3.0",
     "@react-hook/window-size": "^3.0.7",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@toast-ui/react-editor": "^3.0.1",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.17",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@toast-ui/react-editor": "^3.1.7",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.37",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "aphrodite": "^2.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-markdown": "^6.0.3",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-markdown": "^8.0.3",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "relative-date": "^1.1.3",
-    "remark-breaks": "^2.0.2",
-    "remark-gfm": "^1.0.0",
-    "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "remark-breaks": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "typescript": "^4.7.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint src --fix",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,9 +53,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
-    "eslint": "^7.32.0"
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
