--- a/infra/package.json
+++ b/infra/package.json
@@ -29,7 +29,8 @@
     "@types/node": "^16.4.6",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
-    "aws-cdk": "^1.118.0",
+    "aws-cdk": "^2.26.0",
+    "aws-cdk-lib": "^2.26.0",
     "dotenv": "^10.0.0",
     "esbuild": "^0.12.19",
     "eslint": "^7.31.0",
