--- a/infra/package.json
+++ b/infra/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "synth:all": "cd src && cdk synth --all && cdk ..",
+    "synth:all": "cd src && cdk synth --all && cd ..",
     "deploy:all": "cd src && cdk deploy --all && cd ..",
     "deploy:website": "cd src && cdk deploy NodeBlog-WebsiteHostBucketStack NodeBlog-WebsiteHostBucketDeploymentStack NodeBlog-CloudFrontStack && cd ..",
-    "deploy:api": "cd src && cd deploy NodeBlog-DatabaseStack NodeBlog-LambdasStack NodeBlog-ApiGwStack"
+    "deploy:api": "cd src && cdk deploy NodeBlog-DatabaseStack NodeBlog-LambdasStack NodeBlog-ApiGwStack NodeBlog-SchedulerStack"
   },
   "author": "",
   "license": "ISC",
