--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "deploy": "cd infra && cdk deploy NodeBlog-DatabaseStack NodeBlog-LambdasStack NodeBlog-ApiGwStack && cd .."
   },
   "author": "",
@@ -29,10 +29,22 @@
     "@sindresorhus/slugify": "^2.1.0",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.957.0",
-    "chatgpt": "^5.2.4",
     "lambda-log": "^3.0.0",
     "node-fetch": "^3.3.1",
+    "openai": "^3.2.1",
     "sillyname": "^0.1.0",
     "uuid": "^8.3.2"
+  },
+  "jest": {
+    "globals": {
+      "jest": true
+    },
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/?(*.)+(spec|test|integration).ts"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
   }
 }
