--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,13 +5,9 @@
     "resolveJsonModule": true,
     "target": "ES2017",
     "outDir": "build",
-    "types": [
-      "node",
-      "jest"
-    ],
+    "types": ["node", "jest", "@types/jest"],
     "esModuleInterop": true
   },
-  "exclude": [
-    "infra"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
