--- a/infra/tsconfig.json
+++ b/infra/tsconfig.json
@@ -3,9 +3,9 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "target": "ES2017",
+    "target": "ES2020",
     "outDir": "build",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "esModuleInterop": true
   },
   "exclude": ["src/cdk.out"]
