--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "lambda-log": "^3.0.0",
     "node-fetch": "^3.3.1",
     "openai": "^3.2.1",
+    "rss-to-json": "^2.1.1",
     "sillyname": "^0.1.0",
     "uuid": "^8.3.2"
   },
